--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   vocab-importer:
     build: .
@@ -9,6 +7,8 @@ services:
       - .:/app
     environment:
       - OLLAMA_HOST=http://ollama:11434
+    env_file:
+      - .env
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8501"]
       interval: 30s
@@ -16,6 +16,13 @@ services:
       retries: 3
     depends_on:
       - ollama
+    command: >
+      sh -c "
+        echo 'Waiting for Ollama to start...' &&
+        sleep 10 &&
+        streamlit run app.py
+      "
+    restart: unless-stopped
 
   ollama:
     image: ollama/ollama:latest
@@ -23,13 +30,7 @@ services:
       - "11434:11434"
     volumes:
       - ollama_data:/root/.ollama
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
+    restart: unless-stopped
 
 volumes:
   ollama_data:
